--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/arunan/snap/netbeans/64/build.properties
+user.properties.file=C:\\Users\\raar9003\\AppData\\Roaming\\NetBeans\\14\\build.properties
